// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Input default 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
  css={
    Object {
      "background": "#fff",
      "border": "1px solid #cfd1d7",
      "borderRadius": "3px",
      "boxSizing": "border-box",
      "marginBottom": "0px",
      "position": "relative",
      "transition": "all .4s ease",
      "width": "100%",
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
    css={
      Object {
        "background": "transparent",
        "color": "#fff",
        "left": "12.5px",
        "padding": "0 3px",
        "position": "absolute",
        "top": "0",
        "transition": "all .4s ease, top 0s",
        "zIndex": 1,
      }
    }
  >
    <EmotionCssPropInternal
      __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
      __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
      css={
        Object {
          "color": "#cfd1d7",
          "fontSize": "14.5px",
          "fontWeight": "500",
          "height": "14.5px",
          "lineHeight": "14.5px",
          "marginTop": "9.5px",
          "transition": "all .4s ease",
        }
      }
    >
      Test
    </EmotionCssPropInternal>
  </EmotionCssPropInternal>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="input"
    autoComplete="off"
    css={
      Object {
        "background": "none",
        "border": "none",
        "boxSizing": "border-box",
        "fontSize": "14.5px",
        "outline": "none",
        "padding": "9.5px 12.5px",
        "position": "relative",
        "width": "100%",
        "zIndex": 2,
      }
    }
    id="test"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyUp={[Function]}
    value=""
  />
</EmotionCssPropInternal>
`;

exports[`Input Input with error 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
  css={
    Object {
      "background": "#fff",
      "border": "1px solid #D15130",
      "borderRadius": "3px",
      "boxSizing": "border-box",
      "marginBottom": "0px",
      "position": "relative",
      "transition": "all .4s ease",
      "width": "100%",
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="input"
    autoComplete="off"
    css={
      Object {
        "background": "none",
        "border": "none",
        "boxSizing": "border-box",
        "fontSize": "14.5px",
        "outline": "none",
        "padding": "9.5px 12.5px",
        "position": "relative",
        "width": "100%",
        "zIndex": 2,
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="error value"
  />
</EmotionCssPropInternal>
`;

exports[`Input Input with valid value 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
  css={
    Object {
      "background": "#fff",
      "border": "1px solid #9BC53D",
      "borderRadius": "3px",
      "boxSizing": "border-box",
      "marginBottom": "0px",
      "position": "relative",
      "transition": "all .4s ease",
      "width": "100%",
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Component"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="input"
    autoComplete="off"
    css={
      Object {
        "background": "none",
        "border": "none",
        "boxSizing": "border-box",
        "fontSize": "14.5px",
        "outline": "none",
        "padding": "9.5px 12.5px",
        "position": "relative",
        "width": "100%",
        "zIndex": 2,
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value="valid value"
  />
</EmotionCssPropInternal>
`;
